feat(thoughts): add templates page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,48 +5,27 @@
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 240 10% 3.9%;
-    --card: 0 0% 100%;
-    --card-foreground: 240 10% 3.9%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 240 10% 3.9%;
+    --gradient: #00cf76;
+    --background: 164 65% 3.28%;
+    --foreground: 164 10% 97.05%;
+    --muted: 164 50% 12.299999999999999%;
+    --muted-foreground: 164 10% 54.1%;
+    --popover: 164 45% 5.33%;
+    --popover-foreground: 164 10% 97.05%;
+    --card: 164 45% 5.33%;
+    --card-foreground: 164 10% 97.05%;
+    --border: 164 50% 12.299999999999999%;
+    --input: 164 50% 12.299999999999999%;
     --primary: 164 100% 41%;
     --primary-foreground: 164 10% 97.05%;
-    --secondary: 240 4.8% 95.9%;
-    --secondary-foreground: 240 5.9% 10%;
-    --muted: 240 4.8% 95.9%;
-    --muted-foreground: 240 3.8% 46.1%;
-    --accent: 240 4.8% 95.9%;
-    --accent-foreground: 240 5.9% 10%;
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 240 5.9% 90%;
-    --input: 240 5.9% 90%;
-    --ring: 142.1 76.2% 36.3%;
-    --radius: 0.5rem;
-  }
-
-  .dark {
-    --background: 20 14.3% 4.1%;
-    --foreground: 0 0% 95%;
-    --card: 24 9.8% 10%;
-    --card-foreground: 0 0% 95%;
-    --popover: 0 0% 9%;
-    --popover-foreground: 0 0% 95%;
-    --primary: 142.1 70.6% 45.3%;
-    --primary-foreground: 144.9 80.4% 10%;
-    --secondary: 240 3.7% 15.9%;
-    --secondary-foreground: 0 0% 98%;
-    --muted: 0 0% 15%;
-    --muted-foreground: 240 5% 64.9%;
-    --accent: 12 6.5% 15.1%;
-    --accent-foreground: 0 0% 98%;
+    --secondary: 164 50% 12.299999999999999%;
+    --secondary-foreground: 164 10% 97.05%;
+    --accent: 164 50% 12.299999999999999%;
+    --accent-foreground: 164 10% 97.05%;
     --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 0 85.7% 97.3%;
-    --border: 240 3.7% 15.9%;
-    --input: 240 3.7% 15.9%;
-    --ring: 142.4 71.8% 29.2%;
+    --destructive-foreground: 164 10% 97.05%;
+    --ring: 164 100% 41%;
+    --radius: 0.5rem;
   }
 }
 
