--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,13 +6,13 @@
 @layer base {
   :root {
     --gradient: #00cf76;
-    --background: 164 65% 3.28%;
+    --background: 0 0% 6%;
     --foreground: 164 10% 97.05%;
     --muted: 164 50% 12.299999999999999%;
     --muted-foreground: 164 10% 54.1%;
     --popover: 164 45% 5.33%;
     --popover-foreground: 164 10% 97.05%;
-    --card: 164 45% 5.33%;
+    --card: 0 0% 9%;
     --card-foreground: 164 10% 97.05%;
     --border: 164 50% 12.299999999999999%;
     --input: 164 50% 12.299999999999999%;
@@ -65,4 +65,25 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+*::-webkit-scrollbar {
+  background-color: hsla(0, 0%, 100%, 0.145);
+  padding: 2px;
+  width: 12px
+}
+
+*::-webkit-scrollbar-thumb {
+  background-clip: content-box;
+  background-color: #bbb;
+  border: 2px solid transparent;
+  border-radius: 0.5rem
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: gray
+}
+
+*::-webkit-scrollbar-thumb:active {
+  background-color: #616161
 }
