--- a/ui/background/background.module.css
+++ b/ui/background/background.module.css
@@ -15,7 +15,7 @@
 }
 
 .main:before {
-  background: radial-gradient(circle, rgba(2, 0, 36, 0) 0, #fafafa 100%);
+  background: radial-gradient(circle, rgba(2, 0, 36, 0) 0, hsl(0, 0%, 8.5%) 100%);
   position: absolute;
   content: "";
   z-index: 2;
