Revert "refactor(app):  move app out of the src folder"
This reverts commit f0855e109e668b7c47816043079d01ed87d0c68b.

--- a/apps/web/src/styles/globals.css
+++ b/apps/web/src/styles/globals.css
@@ -25,6 +25,7 @@
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 164 10% 97.05%;
     --ring: 164 100% 41%;
+    --radius: 0.5rem;
   }
 }
 
