--- a/apps/web/src/styles/prosemirror.css
+++ b/apps/web/src/styles/prosemirror.css
@@ -1,7 +1,7 @@
 .ProseMirror .is-editor-empty:first-child::before {
   content: attr(data-placeholder);
   float: left;
-  color: var(--novel-stone-400);
+  color: hsla(var(--muted-foreground));
   pointer-events: none;
   height: 0;
 }
@@ -9,7 +9,7 @@
 .ProseMirror .is-empty::before {
   content: attr(data-placeholder);
   float: left;
-  color: var(--novel-stone-400);
+  color: hsla(var(--muted-foreground));
   pointer-events: none;
   height: 0;
 }
@@ -22,44 +22,40 @@
 
 /* Custom TODO list checkboxes – shoutout to this awesome tutorial: https://moderncss.dev/pure-css-custom-checkbox-style/ */
 
-ul[data-type="taskList"] li>label {
-  margin-right: 0.2rem;
-  user-select: none;
-}
-
-@media screen and (max-width: 768px) {
-  ul[data-type="taskList"] li>label {
-    margin-right: 0.5rem;
-  }
-}
 
 ul[data-type="taskList"] li>label input[type="checkbox"] {
   -webkit-appearance: none;
   appearance: none;
-  background-color: var(--novel-white);
+  background-color: var(--background);
   margin: 0;
   cursor: pointer;
   width: 1.2em;
   height: 1.2em;
   position: relative;
+  border-radius: 4px;
   top: 5px;
-  border: 2px solid var(--novel-stone-900);
-  margin-right: 0.3rem;
+  border: 1px solid hsla(var(--primary));
+  margin-right: 0.5rem;
   display: grid;
   place-content: center;
 
   &:hover {
-    background-color: var(--novel-stone-50);
+    background-color: hsla(var(--secondary));
   }
 
   &:active {
-    background-color: var(--novel-stone-200);
+    background-color: hsla(var(--secondary));
+  }
+
+  &:checked {
+    background-color: hsla(var(--primary));
   }
 
   &::before {
     content: "";
     width: 0.65em;
     height: 0.65em;
+    color: hsla(var(--primary-foreground));
     transform: scale(0);
     transition: 120ms transform ease-in-out;
     box-shadow: inset 1em 1em;
@@ -73,9 +69,9 @@ ul[data-type="taskList"] li>label input[type="checkbox"] {
 }
 
 ul[data-type="taskList"] li[data-checked="true"]>div>p {
-  color: var(--novel-stone-400);
   text-decoration: line-through;
-  text-decoration-thickness: 2px;
+  text-decoration-thickness: 1px;
+  opacity: 0.65;
 }
 
 /* Overwrite tippy-box original max-width */
