--- a/apps/web/src/styles/globals.css
+++ b/apps/web/src/styles/globals.css
@@ -29,33 +29,32 @@
   }
 }
 
-
-@layer base {
+.dark {
   :root {
-    --novel-black: rgb(255 255 255);
-    --novel-white: rgb(25 25 25);
-    --novel-stone-50: rgb(35 35 34);
-    --novel-stone-100: rgb(41 37 36);
-    --novel-stone-200: rgb(66 69 71);
-    --novel-stone-300: rgb(112 118 123);
-    --novel-stone-400: rgb(160 167 173);
-    --novel-stone-500: rgb(193 199 204);
-    --novel-stone-600: rgb(212 217 221);
-    --novel-stone-700: rgb(229 232 235);
-    --novel-stone-800: rgb(232 234 235);
-    --novel-stone-900: rgb(240, 240, 241);
-
-    --novel-highlight-default: #000000;
-    --novel-highlight-purple: #3f2c4b;
-    --novel-highlight-red: #5c1a1a;
-    --novel-highlight-yellow: #5c4b1a;
-    --novel-highlight-blue: #1a3d5c;
-    --novel-highlight-green: #1a5c20;
-    --novel-highlight-orange: #5c3a1a;
-    --novel-highlight-pink: #5c1a3a;
-    --novel-highlight-gray: #3a3a3a;
+    --gradient: #00cf76;
+    --background: 0 0% 6%;
+    --foreground: 164 10% 97.05%;
+    --muted: 164 50% 12.299999999999999%;
+    --muted-foreground: 164 10% 54.1%;
+    --popover: 164 45% 5.33%;
+    --popover-foreground: 164 10% 97.05%;
+    --card: 0 0% 9%;
+    --card-foreground: 164 10% 97.05%;
+    --border: 164 50% 12.299999999999999%;
+    --input: 164 50% 12.299999999999999%;
+    --primary: 164 91% 58%;
+    --primary-foreground: 164 9.1% 5.8%;
+    --secondary: 164 50% 12.299999999999999%;
+    --secondary-foreground: 164 10% 97.05%;
+    --accent: 164 50% 12.299999999999999%;
+    --accent-foreground: 164 10% 97.05%;
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 164 10% 97.05%;
+    --ring: 164 100% 41%;
+    --radius: 0.5rem;
   }
 }
+
 
 @layer base {
   * {
