fix(app): ♿️ fix accessibility muted color

--- a/apps/web/src/styles/globals.css
+++ b/apps/web/src/styles/globals.css
@@ -35,7 +35,7 @@
     --background: 230, 43%, 3%;
     --foreground: 164 10% 97.05%;
     --muted: 164 50% 12.299999999999999%;
-    --muted-foreground: 164 10% 54.1%;
+    --muted-foreground: 171, 10%, 64%;
     --popover: 164 45% 5.33%;
     --popover-foreground: 164 10% 97.05%;
     --card: 218, 36%, 4%;
